# SingularEventLibrary

./: CMakeLists.txt  readme.md
cmake/: singularConfig.cmake.in
include/singular/: Event.hpp  EventHandler.hpp  EventID.hpp  IEventListener.hpp
src/singular/: CoreProperties.hpp  Event.cpp  EventHandler.inl  EventID.inl
tests/: singular_test.cpp
